# AiScientist

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  对话上下文-AiScientist代码阅读-L3完成.md  对话上下文-AiScientist代码阅读-MLE数据流完成.md  对话上下文-VSCode调试本地MLE链路-已配置完成.md
config/: llm_profiles.yaml
docs/: project-deep-dive.md
examples/mle/: example_run_mle.sh
examples/paper/: example_run_paper_md.sh
src/aisci_agent_runtime/: local_shell.py  summary_utils.py
src/aisci_agent_runtime/subagents/: base.py
src/aisci_agent_runtime/tools/: __init__.py  base.py  research_tools.py
src/aisci_app/: cli.py  presentation.py  tui.py
src/aisci_core/: models.py  store.py
src/aisci_domain_mle/: adapter.py  cli.py  orchestrator.py  preflight.py
src/aisci_domain_paper/: adapter.py  configs.py  constants.py  engine.py  orchestrator.py  runtime.py  state_manager.py
src/aisci_domain_paper/prompts/: __init__.py  templates.py
src/aisci_domain_paper/subagents/: base.py  experiment.py  generic.py  implementation.py  paper_reader.py  prioritization.py  resource_download.py  search.py  validation.py
src/aisci_domain_paper/tools/: __init__.py  basic_tool.py  clean_validation_tool.py  experiment_tool.py  implementation_tool.py  paper_reader_tool.py  prioritization_tool.py  spawn_subagent_tool.py
src/aisci_runtime_docker/: agent_session.py
tests/: test_app_console.py  test_domain_adapters.py  test_paper_prompts.py  test_paper_runtime_alignment.py  test_store.py
